Dodanie dwuch projektów simpleCMS i MyTaskManager

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ header {
 }
 
 h1 {
-    color: #ffffff;
+    color: #357494;
     padding-top: 15%;
     font-size: 3em;
     text-align: center;
@@ -46,7 +46,7 @@ h1 {
 }
 
 header p {
-    color: #357494;
+    color: #D9A623;
     padding-bottom: 20%;
     font-size: 2.5em;
     text-align: center;
