--- a/style.css
+++ b/style.css
@@ -14,20 +14,20 @@ header {
 .navbar>.container .navbar-brand {
      font-family: 'Didact Gothic', sans-serif;
      font-size: 2em;
-     color: #357494;
+     color: #000;
 }
 
 .navbar-default {
     background-color: transparent;
     border-bottom: none;
-    color: #ffffff;
+    color: #fff;
 }
 
 .navbar-default .navbar-nav>li>a {
     font-weight: bold;
     font-family: 'Lato', sans-serif;
     text-transform: uppercase;
-    color: #357494;
+    color: #fff;
     font-size: 1.2em;
 }
 
